# Aviarch

./: README.md
firmware/: CMakeLists.txt
hardware/SImpleFlightController/: SImpleFlightController.kicad_pcb
hardware/SImpleFlightController/production/: netlist.ipc
